--- a/NKGMRES_Test.ipynb
+++ b/NKGMRES_Test.ipynb
@@ -6,7 +6,7 @@
       "name": "NKGMRES_Test",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+K5Y9UDupBRF0Y8Jvwxwg",
+      "authorship_tag": "ABX9TyMLBlVTwpY/ALoTTYNDbamO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "from typing import List, Optional, Tuple\n",
         "from time import time"
       ],
-      "execution_count": 29,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -229,14 +229,14 @@
         "\n",
         "  def GMRES(self,\n",
         "            matvec,\n",
-        "            y1 :np.ndarray,                                                                      #How can I make GMRES applicable in general??\n",
+        "            y1 :np.ndarray,                                                                     \n",
         "            args: Tuple) -> Tuple[np.ndarray, np.int]:\n",
         "\n",
         "\n",
         "    '''\n",
         "    INPUT\n",
-        "    matvec (Python function): A Python function to perform Newton on.\n",
-        "    y1          (N x 1 vector): Initial guess of the solution. \n",
+        "    matvec   (Python function): A Python function to perform Newton on.\n",
+        "    y1       (Nx1 numpy array): Initial guess of the solution. \n",
         "    args               (Tuple): A tuple with any argument the equation function needs\n",
         "  \n",
         "    OUTPUT\n",
@@ -261,9 +261,9 @@
         "    #Dimension of the problem\n",
         "    N = y1.shape[0]\n",
         "\n",
-        "    #GMRES counter (starting from -1 because adapted from Matlab)                    #### Indexing should be fixed\n",
-        "    k = -1  \n",
-        "\n",
+        "    #GMRES counter\n",
+        "    k = 0\n",
+        "    \n",
         "    #Flag for code termination\n",
         "    code_break = False\n",
         "\n",
@@ -274,7 +274,7 @@
         "    residual = np.linalg.norm(b)\n",
         "    \n",
         "    #Initialize Krylov subspace dimension counter\n",
-        "    krylov_dimension = 0\n",
+        "    krylov_dimension = 0 \n",
         "\n",
         "\n",
         "    # Test for termination on entry - checking for Newton residual\n",
@@ -316,11 +316,8 @@
         "\n",
         "\n",
         "    # GMRES Iterations\n",
-        "    while rho>errtol_g and k<self.kmax - 2 and not code_break:\n",
+        "    while rho>errtol_g and k<self.kmax - 1 and not code_break: \n",
         "\n",
-        "        k+=1\n",
-        "\n",
-        "        #####CGS2#####\n",
         "        #Producing vectors out of matrix-vector multiplications \n",
         "        v[:,k+1] = self.matvec(v[:,k], y1, args)\n",
         "\n",
@@ -329,54 +326,64 @@
         "            h[j,k] = v[:,j].T @ v[:,k+1]  \n",
         "            v[:,k+1] = v[:,k+1] - h[j,k] * v[:,j]\n",
         "        \n",
+        "        #Norm of component in new direction\n",
         "        h[k+1,k] = np.linalg.norm(v[:,k+1])\n",
         "\n",
-        "        # Reorthogonalization (CGS-2)\n",
+        "        # Reorthogonalization\n",
         "        for j in range(k):\n",
         "            hr = v[:,j].T @ v[:,k+1]\n",
         "            h[j,k] = h[j,k] + hr\n",
         "            v[:,k+1] = v[:,k+1] - v[:,j] * hr\n",
         "        \n",
+        "        #Norm of component in new direction after reorthogonalization\n",
         "        h[k+1,k] = np.linalg.norm(v[:,k+1])\n",
         "\n",
-        "        # Happy-Breakdown Test                                                      ??????????????????\n",
+        "        # Breakdown Test: We have span the entire Krylov space                    ?????????? confirm please\n",
+        "        # (so, the component in the new direction is 0)\n",
         "        if h[k+1,k]!=0:\n",
-        "            v[:,k+1] = v[:,k+1] / h[k+1,k]\n",
+        "          v[:,k+1] = v[:,k+1] / h[k+1,k]\n",
+        "        else:\n",
+        "          code_break=True\n",
         "\n",
-        "        #####GIVENS_ROTATION#####\n",
+        "        # Given's rotation                                                        \n",
         "        if k>0:\n",
         "            h[0:k+1,k] = givapp(c[0:k], s[0:k], h[0:k+1,k], k)                   \n",
         "\n",
         "        nu = np.linalg.norm(h[k:k+2,k]) \n",
         "\n",
-        "        #If nu=0 this means that we have span the entire Krylov space\n",
+        "        #If nu=0 this means that we have span the entire Krylov space             ???????????????????????\n",
         "        if nu!=0:\n",
         "            c[k] = np.conj(h[k,k] / nu)\n",
         "            s[k] = -1 * h[k+1,k] / nu\n",
         "            h[k,k] = c[k] * h[k,k] - s[k] * h[k+1,k]\n",
         "            h[k+1,k] = 0\n",
-        "            g[k:k+2] = givapp(c[k],s[k], g[k:k+2],1)                          \n",
+        "            g[k:k+2] = givapp(c[k],s[k], g[k:k+2],1)  \n",
+        "        else:\n",
+        "          code_break = True                        \n",
         "        \n",
-        "        rho = abs(g[k+1])       \n",
+        "        rho = abs(g[k+1])  \n",
         "\n",
-        "        krylov_dimension = k\n",
+        "        krylov_dimension = k \n",
         "\n",
-        "    if np.linalg.det(h[0:k+1,0:k+1])==0 and k<self.kmax:\n",
+        "        k+=1   \n",
+        "\n",
+        "    if np.linalg.det(h[0:k,0:k])==0 and k<self.kmax:\n",
         "        if self.Print_execution_details:\n",
         "            print('Zero determinant - GMRES fails to find a solution')\n",
         "        k=self.kmax                                                             #???????????????????\n",
         "\n",
         "\n",
         "\n",
-        "    y = np.linalg.inv(h[0:k+1,0:k+1]) @ g[0:k+1]\n",
-        "    x = x0 + (v[0:N,0:k+1] @ y).T\n",
-        "    x = x[0]\n",
+        "    #Summing up the coefficients on each Krylov subspace\n",
+        "    y = np.linalg.inv(h[0:k,0:k]) @ g[0:k]  \n",
+        "    x = x0 + (v[0:N,0:k] @ y).T \n",
         "\n",
-        "    yn1 =y1 + x\n",
+        "    # ynew =  yold + Delta y (Delta y : Newton solution)\n",
+        "    yn1 = y1 + x.ravel()\n",
         "\n",
         "    return yn1, krylov_dimension"
       ],
-      "execution_count": 30,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -387,7 +394,7 @@
         "\n",
         "NKGMRES1=  NKGMRES(function = funcc,\n",
         "               atol_n=1E-7, \n",
-        "               rtol_n=1E-5, \n",
+        "               rtol_n=1E-6, \n",
         "               errtol_g=1E-8,\n",
         "               nmax=10,\n",
         "               kmax=40,\n",
@@ -405,9 +412,9 @@
           "height": 1000
         },
         "id": "kjvP7LgtO056",
-        "outputId": "6e078af7-0583-4ef8-f58d-941f6d5246e6"
+        "outputId": "cbac54e5-7eff-4da6-ff23-96f18e68502c"
       },
-      "execution_count": 45,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +423,7 @@
             "Solution Vector: [-2.00000002  3.99999995 -0.99999999]\n",
             "Total Number of Newton Iterations: 5\n",
             "Maximum Krylov dimension: 3\n",
-            "Execution time:  0.029466867446899414  s\n"
+            "Execution time:  0.017920255661010742  s\n"
           ]
         },
         {
@@ -427,7 +434,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 109
         },
         {
           "output_type": "display_data",
