--- a/NKGMRES.ipynb
+++ b/NKGMRES.ipynb
@@ -6,7 +6,7 @@
       "name": "NKGMRES_Test",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO7itW0qaECtdkeAI/+2Cfj",
+      "authorship_tag": "ABX9TyNdH2oYcMQPjjqmA3dvXaF6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "from typing import List, Optional, Tuple\n",
         "from time import time"
       ],
-      "execution_count": 118,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -248,7 +248,7 @@
         "\n",
         "\n",
         "    # Given's Rotation\n",
-        "    def givapp(c,s,vin,k):                                                        ### There must be a smarter way to write this..\n",
+        "    def givapp(c,s,vin,k):                                                        \n",
         "        vrot = vin\n",
         "\n",
         "        for i in range(k):\n",
@@ -295,7 +295,7 @@
         "    x = np.zeros(N) \n",
         "    x0 = np.zeros(N)\n",
         "\n",
-        "    #Setting initial residual of GMRES                                                  ????? Are all of these necessary??\n",
+        "    #Setting initial residual of GMRES                                                 \n",
         "    r = b\n",
         "    rho = residual\n",
         "    g = rho * np.eye(self.kmax+1,1)\n",
@@ -383,7 +383,7 @@
         "\n",
         "    return yn1, krylov_dimension"
       ],
-      "execution_count": 119,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -412,9 +412,9 @@
           "height": 1000
         },
         "id": "kjvP7LgtO056",
-        "outputId": "0189e0de-81ee-48c7-8763-f34d46918fe4"
+        "outputId": "bde96ede-0e91-4033-a805-991bf7d7df1f"
       },
-      "execution_count": 121,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +423,7 @@
             "Solution Vector: [-2.   2.   0.5]\n",
             "Total Number of Newton Iterations: 7\n",
             "Maximum Krylov dimension: 3\n",
-            "Execution time:  0.032773733139038086  s\n"
+            "Execution time:  0.009499311447143555  s\n"
           ]
         },
         {
@@ -434,7 +434,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 121
+          "execution_count": 124
         },
         {
           "output_type": "display_data",
